<resources>
    <string name="app_name">My Grocery Delivery</string>
    <string name="splashimage">splashImage</string>
    <string name="my_grocery">My Grocery</string>
    <string name="version_1">Version: 1</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google_and_facebook">Sign in with Google and Facebook</string>
    <string name="google_client_id">389061846078-ik05qfe340ksmi9i4sjrpihlbfk78vnr.apps.googleusercontent.com</string>
    <string name="google_client_secret_id">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</string>
    <string name="check_network">Please check your internet connection</string>
    <string name="search">Search…</string>
    <string name="logout">Logout</string>
    <string name="banner_image">banner_image</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title1">Your Grocery Without Stress</string>
    <string name="description1">Shop from a wide selection of grocery items from top brands, with over 80,000 items on our online supermarket</string>
    <string name="title2">Amazing Discount and Offer</string>
    <string name="description2">Cheaper prices than your local supermarket, great discount and cashback offers to top it off.</string>
    <string name="title3">Speedy Doorstep Delivery</string>
    <string name="description3">Guaranteed same day delivery in groceries in your area, you can pay on delivery! </string>
    <string name="what_would_you_buy_today">What would you buy today?</string>
    <string name="address_book">Address Book</string>
    <string name="your_orders">Your Orders</string>
    <string name="favorite_products">Favorite Products</string>
    <string name="choose_language">Choose Language</string>
    <string name="available_price">Available Price</string>
    <string name="back_button">back button</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="categories">Categories</string>
    <string name="hi_anil">Hi, Anil!</string>
    <string name="add_address">Add Address</string>
</resources>