<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/supermarket" />

            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageIcon"
                android:fontFamily="@font/regular"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/my_grocery"
                android:textColor="@color/cover_color"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAppName"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/cover_color"
                android:fontFamily="@font/regular"
                android:text="@string/sign_in"
                app:cornerRadius="5dp" />

            <LinearLayout
                android:id="@+id/linearLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignIn"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1.3"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight=".4"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="Or"
                    android:textColor="@color/grey"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1.3"
                    android:background="@color/grey" />
            </LinearLayout>

            <TextView
                android:id="@+id/signInGoogleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLL"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/sign_in_with_google_and_facebook"
                android:textColor="@color/grey"
                android:textSize="13sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signInGoogleTxt"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/regular"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                android:textColor="@color/dip_red"
                app:cornerRadius="5dp"
                app:strokeColor="@color/dip_red"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFacebookLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnGoogleLogin"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/cover_color"
                android:fontFamily="@font/regular"
                android:text="@string/sign_in_with_facebook"
                android:textAllCaps="false"
                app:cornerRadius="5dp" />

        </RelativeLayout>



    </RelativeLayout>

</layout>

