<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <!--<LinearLayout-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:orientation="vertical">-->
    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <com.google.android.material.appbar.MaterialToolbar-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:background="@color/white"-->
    <!--            android:contentInsetStart="0dp"-->
    <!--            app:contentInsetLeft="0dp"-->
    <!--            app:contentInsetStart="0dp"-->
    <!--            app:contentInsetStartWithNavigation="0dp">-->

    <!--            <RelativeLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:padding="10dp"-->
    <!--                android:orientation="horizontal">-->

    <!--                <com.google.android.material.imageview.ShapeableImageView-->
    <!--                    android:id="@+id/profileImage"-->
    <!--                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"-->
    <!--                    android:layout_width="50dp"-->
    <!--                    android:layout_height="50dp"-->
    <!--                    android:layout_alignParentStart="true"-->
    <!--                    android:scaleType="centerCrop"-->
    <!--                    app:strokeWidth="1dp"-->
    <!--                    app:strokeColor="@color/cover_color"/>-->


    <!--                <LinearLayout-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_toEndOf="@+id/profileImage"-->
    <!--                    android:layout_centerInParent="true"-->
    <!--                    android:orientation="vertical">-->
    <!--                    <TextView-->
    <!--                        android:layout_width="wrap_content"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:id="@+id/txtName"-->
    <!--                        android:textSize="15sp"-->
    <!--                        android:text="@string/app_name"-->
    <!--                        android:layout_marginStart="10dp"-->
    <!--                        android:textStyle="bold"-->
    <!--                        android:fontFamily="@font/regular"-->
    <!--                        android:textColor="@color/black"/>-->
    <!--                    <TextView-->
    <!--                        android:id="@+id/txtEmail"-->
    <!--                        android:layout_width="wrap_content"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:text="@string/app_name"-->
    <!--                        android:layout_marginStart="10dp"-->
    <!--                        android:textColor="@color/grey"-->
    <!--                        android:textSize="13sp"-->
    <!--                        android:fontFamily="@font/medium"/>-->

    <!--                </LinearLayout>-->

    <!--                <TextView-->
    <!--                    android:id="@+id/txtLogout"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_alignParentEnd="true"-->
    <!--                    android:layout_centerInParent="true"-->
    <!--                    android:text="@string/logout"-->
    <!--                    android:fontFamily="@font/bold"-->
    <!--                    android:textColor="@color/cover_color"-->
    <!--                    android:textSize="15sp" />-->


    <!--            </RelativeLayout>-->

    <!--        </com.google.android.material.appbar.MaterialToolbar>-->
    <!--    </com.google.android.material.appbar.AppBarLayout>-->
    <!--</LinearLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/cardProfile"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <View
                        android:id="@+id/profileImageBackground"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/green_circle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/profileImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_profile"
                        app:layout_constraintBottom_toBottomOf="@+id/profileImageBackground"
                        app:layout_constraintEnd_toEndOf="@id/profileImageBackground"
                        app:layout_constraintStart_toStartOf="@+id/profileImageBackground"
                        app:layout_constraintTop_toTopOf="@+id/profileImageBackground"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                    <TextView
                        android:id="@+id/txtProfileName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/app_name"
                        android:textColor="@color/dark_blue"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"
                        android:textStyle="normal"
                        app:layout_constraintTop_toTopOf="@id/profileImageBackground"
                        app:layout_constraintBottom_toTopOf="@id/txtProfileEmail"
                        app:layout_constraintEnd_toStartOf="@+id/profileImageBackground"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txtProfileEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:padding="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/md_grey_600"
                        android:textSize="13sp"
                        android:maxLines="1"
                        android:ems="3"
                        android:layout_marginStart="10dp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="@id/profileImageBackground"
                        app:layout_constraintEnd_toStartOf="@+id/profileImageBackground"
                        app:layout_constraintEnd_toEndOf="@id/profileImageBackground"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtProfileName" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:id="@+id/card1"
                android:focusable="true"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardProfile">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rectangular_profile_option"
                    android:backgroundTint="@color/md_yellow_300"
                    android:padding="10dp"
                    android:src="@drawable/ic_outline_location_on_24"
                    app:tint="@color/md_yellow_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/imageIcon"
                        android:gravity="center_vertical"
                        android:text="@string/address_book"
                        android:textColor="@color/dark_blue" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                app:cardCornerRadius="5dp"
                android:id="@+id/card2"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/imageIcon1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/rectangular_profile_option"
                        android:backgroundTint="@color/md_light_blue_200"
                        android:padding="10dp"
                        android:src="@drawable/ic_round_history_24"
                        app:tint="@color/md_light_blue_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/imageIcon1"
                        android:gravity="center_vertical"
                        android:text="@string/your_orders"
                        android:textColor="@color/dark_blue" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                app:cardCornerRadius="5dp"
                android:id="@+id/card3"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/imageIcon2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/rectangular_profile_option"
                        android:backgroundTint="@color/md_red_200"
                        android:padding="10dp"
                        android:src="@drawable/ic_round_favorite_border_24"
                        app:tint="@color/md_red_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/imageIcon2"
                        android:gravity="center_vertical"
                        android:text="@string/favorite_products"
                        android:textColor="@color/dark_blue" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/line1"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_line_svgrepo_com"
                app:layout_constraintTop_toBottomOf="@+id/card3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                app:cardCornerRadius="5dp"
                android:id="@+id/card4"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/imageIcon3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/rectangular_profile_option"
                        android:backgroundTint="@color/md_red_200"
                        android:padding="10dp"
                        android:src="@drawable/ic_round_favorite_border_24"
                        app:tint="@color/md_red_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/imageIcon3"
                        android:gravity="center_vertical"
                        android:text="@string/choose_language"
                        android:textColor="@color/dark_blue" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>